[package]
name = "rug_calc"
version = "0.1.3"
edition = "2021"
description = "A Rug-powered scientific computing engine featuring high-performance, high-precision numerical evaluation."
repository = "https://github.com/lhjok/rug_calc"
keywords = ["calculator", "math", "arbitrary-precision", "scientific", "high-performance"]
categories = ["science", "mathematics", "parser-implementations"]
license = "MIT"

[dependencies]
once_cell = "1.21.3"

[dependencies.phf]
version = "0.13.1"
features = ["macros"]

[dependencies.rug]
version = "1.28.1"
default-features = false
features = ["std", "float"]
